k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-page-canary
  namespace: simple-page
spec:
  selector:
    app: simple-page
  ports:
    - name: http
      port: 80
      targetPort: 80
