k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-canary
  namespace: todo-list
spec:
  selector:
    app: todo-list
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
