k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-page
  namespace: simple-page
spec:
  selector:
    app: simple-page
  ports:
    - port: 80
      targetPort: 80
