k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-page
  namespace: simple-page

spec:
  ingressClassName: nginx

  rules:
    - host: simple-page.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: simple-page
                port:
                  number: 80
